# sanskrit-transliteration

./: Coding_Rules.xlsx  MidsemPPT.key  MinorP.pages  Split_Rules.xlsx
Transcriber/: CMakeLists.txt  bengali.txt  convert.py  decoded.txt  gujarati.txt  gurmukhi.txt  harvard.txt  hindi.txt  iast.txt  ipa.txt  iso15919.txt  itrans.txt  main.cpp  makefile  telugu.txt  transcriber  velthius.txt
Transcriber/Bengali/: BenDecode.cpp  BenDecode.h  BenEncode.cpp  BenEncode.h  lex.Ben.cc  transcribe.l
Transcriber/Devanagiri/: DevDecode.cpp  DevDecode.h  DevEncode.cpp  lex.Dev.cc  transcribe.l
Transcriber/Gujarati/: GujDecode.cpp  GujDecode.h  GujEncode.cpp  GujEncode.h  lex.Guj.cc  transcribe.l
Transcriber/Gurmukhi/: GurDecode.cpp  GurDecode.h  GurEncode.cpp  GurEncode.h  lex.Gur.cc  transcribe.l
Transcriber/HarvardKyoto/: HarDecode.cpp  HarDecode.h  HarEncode.cpp  HarEncode.h  lex.Har.cc  transcribe.l
Transcriber/IAST/: IasDecode.cpp  IasDecode.h  IasEncode.cpp  IasEncode.h  lex.Ias.cc  transcribe.l
Transcriber/IPA/: IpaDecode.cpp  IpaDecode.h  IpaEncode.cpp  IpaEncode.h  lex.Ipa.cc  transcribe.l
Transcriber/ISO15919/: IsoDecode.cpp  IsoDecode.h  IsoEncode.cpp  IsoEncode.h  lex.Iso.cc  transcribe.l
Transcriber/ITRANS/: ItrDecode.cpp  ItrDecode.h  ItrEncode.cpp  ItrEncode.h  lex.Itr.cc  transcribe.l
Transcriber/Oriya/: OriDecode.cpp  OriDecode.h  OriEncode.cpp  OriEncode.h  lex.Ori.cc  transcribe.l
Transcriber/Resources/: CodeMap.cpp  CodeMap.h  Decode.h  WordMap.cpp  WordMap.h
Transcriber/SLP1/: SlpDecode.cpp  SlpEncode.h  lex.Slp.cc  transcribe.l
(+85 files in other folders)
